2010/04/14 (TS):
 - Makefile.am, tsec_lldrv.c: Added support for mvme3100's tsec NIC
   (***UNTESTED*** [I don't have a transition module for testing with
   a secondary ethernet port]).

   NOTE: This requires rtems-4.10 with some new API features!

2010/03/17 (TS):
 - lanIpBasic.c: Fixed IGMP problems:
     o igmp_send_msg(): even if buffer allocation fails a valid
       MC address may still be found. Moved lookup outside of
       'if ( buf_p )' statement.
     o BUGFIX: igmp_timeo() dereferenced 'mca' pointer even if
       no address was found (which could happen if no buffer
       was available, see above).
   With these two fixes: if igmp_timeo() finds that 'mca' lookup
   failed it means that the group was unsubscribed between the
   callout task marking the callout as not pending and the 
   igmp_timeo() being executed. In this case, no callout_deactivate()
   operation is necessary because the mca and associated callout
   struct are defunct and will be destroyed.
     o should assert !lanIpCallout_pending instead of !lanIpCallout_active
       after a trystop operation (because if trystop fails the callout
       is still active but not pending).
2010/02/09 (TS):
 - mve_lldrv.c: Uncommented BSP_MVE_IRQ_LINK which was commented (zero)
   and thus not handling link interrupts for unknown reasons (seems to
   have been present since version 1.1). Probably this is a leftover
   from when we didn't have the ack_link_chg entry point.
2010/02/09 (TS):
 - drvGnrEthIpBasic.c: Partly reverted change made on 2009/10/17. By
      default DO stop sending if link is down. However, a variable
      'drvGnreth_ignore_stopped' was introduced to override this
      default behavior if needed.
2010/02/04 (TS):
 - lanIpBasic.c:
    o BUGFIX: _udpSockSendTo_internal() must release rbuf even if the
      call fails! (As per udpComm API documentation these are the
      semantics. Implementing different semantics for udpSock would be
      confusing.)
2010/02/04 (TS):